2008-10-16 Version 1.2.0-beta released

2008-10-14 Steve Chu <stvchu@gmail.com>
  * a new unittest suit 'mdbtest.py' is added
  * a new benchmark suit 'mcben.py' is added, now you can get the benchmark in your environment
    and find out how fast MemcacheDB can run.

2008-10-08 Steve Chu <stvchu@gmail.com>
  * lots of statistics code clean up; stats command adjusted for better rendering; now more replication statistics info is provided. 
  * more compact and verbose message for logging
  * lots of replication code clean up for more reliable electing, a new option "-n" is added that allows user to customize the votes of electing.
  * "memcache.py" is nearly patched for recent changes on private commands. 

2008-09-04 Steve Chu <stvchu@gmail.com>
  * New option '-e' to set percent of the pages in the cache that should be clean, used for memp_trickle call(only available when '-T' is presented).
   
2008-09-03 Steve Chu <stvchu@gmail.com>
  * Replace the database type setting option '-T' with '-B'
  * Now '-T' has new meaning that it fires a separate thread to do memp_trickle every xx seconds.
    This feature makes the memory pool more effective by reducing too much frequent pages swapping.
   
2008-09-01 Steve Chu <stvchu@gmail.com>
  * Now 'append' and 'prepend' commands are supported.
  * Merge bugfix code from Memecached community.
  * lots of refactors for better implementation and a bit code tuning.

2008-08-28 Version 1.1.0 released
2008-08-28 Version 1.0.4 released(maitaining release)

2008-07-25 Steve Chu <stvchu@gmail.com>
  * Warning: 'pkget' and 'pvget' private command now has been discarded. 
    MemcacheDB will be a more memcache protocol compatible daemon(append and
    prepend command will be implemented later), and will not add relational 
    data model any more, the structural data storage will be issued by another
    project (now internal only).

2008-07-25 Steve Chu <stvchu@gmail.com>
  * Bugfix: "multiple get" did not return the right value
